--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Hello world!</h1>
-<p>This is the first file in my new Git Repo new Image , changes on web pull </p>
+<p>This is the first file in my new Git Repo new Image , changes on web pull , at local  </p>
 
 </body>
 </html>
